--- a/Assignment2/app/src/main/res/layout/flowers.xml
+++ b/Assignment2/app/src/main/res/layout/flowers.xml
@@ -72,4 +72,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/btn_star_big_off"
         tools:layout_editor_absoluteY="35dp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="46dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="16dp"
+        android:text="+"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/priceTextView"
+        app:layout_constraintTop_toBottomOf="@+id/favouriteImageView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
