--- a/Assignment2/app/src/main/res/layout/flowers.xml
+++ b/Assignment2/app/src/main/res/layout/flowers.xml
@@ -67,22 +67,23 @@
         android:id="@+id/favouriteImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="28dp"
+        android:layout_marginEnd="16dp"
         android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/btn_star_big_off"
-        tools:layout_editor_absoluteY="35dp" />
+        tools:layout_editor_absoluteY="5dp" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="46dp"
-        android:layout_height="42dp"
+        android:layout_width="44dp"
+        android:layout_height="43dp"
         android:layout_marginStart="104dp"
         android:layout_marginTop="22dp"
         android:layout_marginEnd="16dp"
         android:text="+"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/priceTextView"
         app:layout_constraintTop_toBottomOf="@+id/favouriteImageView" />
 
