--- a/Assignment2/app/src/main/res/layout/flowers.xml
+++ b/Assignment2/app/src/main/res/layout/flowers.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="130dp"
-    android:backgroundTint="#A989E3">
+    android:backgroundTint="@color/lilac">
 
 
     <ImageView
@@ -80,6 +80,7 @@
         android:layout_marginStart="104dp"
         android:layout_marginTop="22dp"
         android:layout_marginEnd="16dp"
+        android:backgroundTint="@color/purple_200"
         android:text="+"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
