--- a/Assignment2/app/src/main/res/layout/activity_favourite.xml
+++ b/Assignment2/app/src/main/res/layout/activity_favourite.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CartActivity">
+    tools:context=".FavouriteActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -25,7 +25,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="My Cart"
+        android:text="My Favourites"
         android:textAlignment="center"
         android:textColor="@color/purple_200"
         android:textSize="22sp"
