--- a/Assignment2/app/src/main/res/layout/flowers_nobuttons.xml
+++ b/Assignment2/app/src/main/res/layout/flowers_nobuttons.xml
@@ -7,6 +7,8 @@
     android:backgroundTint="@color/lilac">
 
 
+
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="124dp"
@@ -63,31 +65,18 @@
         app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
         app:layout_constraintVertical_bias="0.0" />
 
-    <ImageView
-        android:id="@+id/favouriteImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/btn_star_big_off"
-        tools:layout_editor_absoluteY="5dp" />
-
     <Button
         android:id="@+id/button"
         android:layout_width="47dp"
         android:layout_height="38dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/purple_200"
         android:text="+"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/priceTextView"
-        app:layout_constraintTop_toBottomOf="@+id/favouriteImageView"
-        app:layout_constraintVertical_bias="0.878" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/button2"
@@ -97,9 +86,9 @@
         android:text="-"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button"
-        app:layout_constraintHorizontal_bias="0.877"
-        app:layout_constraintStart_toEndOf="@+id/priceTextView"
-        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toEndOf="@+id/titleTextView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.01" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
