implemented timer for delivery

--- a/Assignment2/app/src/main/res/layout/flowers_nobuttons.xml
+++ b/Assignment2/app/src/main/res/layout/flowers_nobuttons.xml
@@ -69,14 +69,13 @@
         android:id="@+id/button"
         android:layout_width="47dp"
         android:layout_height="38dp"
+        android:layout_marginEnd="4dp"
         android:backgroundTint="@color/purple_200"
         android:text="+"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.01" />
 
     <Button
         android:id="@+id/button2"
@@ -86,7 +85,6 @@
         android:text="-"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button"
-        app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toEndOf="@+id/titleTextView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01" />
